--- a/css/style.css
+++ b/css/style.css
@@ -419,21 +419,113 @@ header.small-wapper .header__menu .header__menu-item {
   font-size: 15px;
 }
 /* line 330, ../sass/style.scss */
+.pages .pages__what_we_do .pages__what_we_do_header-title {
+  position: absolute;
+  left: 0px;
+  top: 150px;
+}
+/* line 335, ../sass/style.scss */
 .pages .pages__what_we_do .pages__what_we_do_bottom-title {
   position: absolute;
   left: 0px;
   bottom: 0px;
 }
-/* line 336, ../sass/style.scss */
+/* line 340, ../sass/style.scss */
+.pages .pages__what_we_do .list-project-min {
+  float: left;
+  width: 80%;
+  margin: 0 0 0 10%;
+  text-align: left;
+  position: absolute;
+  left: 0px;
+  bottom: 0px;
+  padding: 0px;
+}
+/* line 349, ../sass/style.scss */
+.pages .pages__what_we_do .list-project-min li {
+  height: 397px;
+  float: left;
+  position: relative;
+  width: 25%;
+  list-style: none;
+  -webkit-transition: all 0.25s 0s ease;
+  transition: all 0.25s 0s ease;
+}
+/* line 357, ../sass/style.scss */
+.pages .pages__what_we_do .list-project-min li a {
+  float: left;
+  width: 100%;
+  height: 100%;
+  display: block;
+  bottom: 0px;
+  position: absolute;
+  overflow: hidden;
+  padding: 0px 40px;
+}
+/* line 367, ../sass/style.scss */
+.pages .pages__what_we_do .list-project-min li h2 {
+  position: absolute;
+  left: 40px;
+  right: 40px;
+  bottom: 20px;
+  text-align: center;
+  color: #fff;
+  font-size: 1.5em;
+  line-height: 32px;
+  font-weight: 700;
+  font-family: 'Open Sans';
+  -webkit-transition: all 0.25s 0s ease;
+  transition: all 0.25s 0s ease;
+}
+/* line 381, ../sass/style.scss */
+.pages .pages__what_we_do .list-project-min li figure {
+  float: left;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  top: 0;
+  -webkit-transition: all 0.25s 0s ease;
+  transition: all 0.25s 0s ease;
+}
+/* line 389, ../sass/style.scss */
+.pages .pages__what_we_do .list-project-min li figure .preview {
+  position: absolute;
+  width: 100%;
+  left: 0;
+  bottom: 90px;
+  -webkit-box-shadow: 0px 0px 50px 0px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 0px 50px 0px rgba(0, 0, 0, 0.5);
+  -webkit-transition: all 0.25s 0s ease;
+  transition: all 0.25s 0s ease;
+}
+/* line 400, ../sass/style.scss */
+.pages .pages__what_we_do .list-project-min li .readMore {
+  height: 80px;
+  line-height: 80px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  display: none;
+  width: 100%;
+  padding: 0 40px;
+  color: #fff;
+  font-size: 13px;
+  font-weight: 700;
+  text-transform: uppercase;
+  border-bottom: 1px solid #384452;
+  -webkit-transition: all 0.25s 0s ease;
+  transition: all 0.25s 0s ease;
+}
+/* line 420, ../sass/style.scss */
 .pages .pages__who_we_are {
   background: #EEEEEE;
 }
-/* line 339, ../sass/style.scss */
+/* line 423, ../sass/style.scss */
 .pages .pages__get_in_touch {
   background: #17649A;
 }
 
-/* line 343, ../sass/style.scss */
+/* line 427, ../sass/style.scss */
 .back-to-top {
   position: absolute;
   bottom: 20px;
